--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- Original code developed by someone else -->
+<!-- This code is not originally mine, and I am only uploading it to help a newcomer learn
+ -mehedi
+  --> 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -47,7 +52,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/')"
           >
             Download CV
           </button>
@@ -375,8 +380,25 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Mehedi. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
